changing list text

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <div class="col-md-3"></div>
 <div class="col-md-9 row" >
 
-<!-- Unordered lists --><div class="new">    <h5 id="list1">Race Result</h5>    <ul aria-labelledby="list1">        <li>Vehicula Magna</li>        <li>Pharetra Vulputate Euismod</li>        <li>Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus magna.</li>        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>    </ul></div>
+<!-- Unordered lists --><div class="new">    <h5 id="list1">Race Result</h5>    <ul aria-labelledby="list1">        <li>Maximum amount: $999.99</li>        <li>Fee per money order: $7.50</li>        <li>Lists should align with surrounding text.</li>        </ul></div>
 
 
 
 
-<h5 id="list2">Race Result</h5><ul aria-labelledby="list2">    <li>Vehicula Magna</li>    <li>Pharetra Vulputate Euismod</li>    <li>Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus magna.</li>    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li></ul>
+<h5 id="list2">Race Result</h5><ul aria-labelledby="list2">    <li>Maximum amount: $999.99</li>    <li>Fee per money order: $7.50</li>    <li>Lists should align with surrounding text.</li>    </ul>
 
-<!-- Ordered lists --><h5 id="list3">Race Result</h5><ol aria-labelledby="list3">    <li>Vehicula Magna</li>    <li>Pharetra Vulputate Euismod</li>    <li>Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus magna.</li>    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li></ol>
+<!-- Ordered lists --><h5 id="list3">Race Result</h5><ol aria-labelledby="list3">    <li>Maximum amount: $999.99</li>    <li>Fee per money order: $7.50</li>    <li>Lists should align with surrounding text.</li>    </ol>
 
 <br role="none"/>
 <br role="none"/>
